<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.impl.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_complete"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/title_save"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/text_about" />
    <item
        android:id="@+id/action_setting"
        android:title="@string/text_setting" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/text_exit" />
</menu>
