<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btn_item_move_to_trash"
        style="@style/btn_item_style"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_delete_selector"
        android:src="@drawable/btn_src_trash_selector"
        android:text="@string/text_btn_trash"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_item_favo"
        style="@style/btn_item_style"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_favo_selector"
        android:text="@string/text_btn_favo" />


    <ImageButton
        android:id="@+id/btn_item_share"
        style="@style/btn_item_style"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_share_selector"
        android:src="@drawable/btn_src_share_selector"
        android:text="@string/text_btn_share" />


    <ImageButton
        android:id="@+id/btn_item_delete"
        style="@style/btn_item_style"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_delete_selector"
        android:src="@drawable/btn_src_delete_selector"
        android:text="@string/text_btn_delete" />
</LinearLayout>