<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_color"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="0dp">

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@null"
            android:hint="@string/hint_username"
            android:singleLine="true"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"

        app:cardCornerRadius="0dp">


        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="0dp">

            <Button
                android:id="@+id/btn_login_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_selector"
                android:text="@string/text_btn_login_ok"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="0dp">

            <Button
                android:id="@+id/btn_login_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_cancel_selector"
                android:text="@string/text_btn_login_cancel"
                android:textColor="#fff"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>