<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abl_detail"
        android:layout_margin="5dp"
        android:padding="5dp"

        android:text="@string/text_title" />

    <TextView
        android:id="@+id/tv_detail_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_title"
        android:text="@string/text_total_num" />

    <android.support.v7.widget.CardView

        android:id="@+id/cv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/et_detail_title"
            style="@style/et_detail_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_title"
            android:minLines="7"
            android:singleLine="false" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_detail_title"
        android:layout_margin="5dp"
        android:text="@string/text_content" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/et_detail_content"
            style="@style/et_detail_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_content"
            android:minLines="7"
            android:singleLine="false" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_detail_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cv_detail_content"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/tv_detail_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_detail_create_time"
        android:layout_margin="5dp" />

</RelativeLayout>